# shop

./: .env.example  .gitignore  .kilocodemodes  .pre-commit-config.yaml  ACT_2_KEY_INSIGHTS_COMPLETE.md  AGENTS.md  ALERT_PANEL_IMPLEMENTATION.md  BAR_CHART_FIX_COMPLETE.md  CODE_REVIEW_FIXES.md  CODE_REVIEW_SUMMARY_STory-9-10.md  CONTEXT.md  CONVERSATION_CLEANUP_FIX.md  CONVERSATION_CLOSURE_FIX.md  CONVERSATION_LIFECYCLE.md  CORS_FIX_SUMMARY.md  CSAT_COLLECTION_IMPLEMENTATION.md  CSAT_IMPLEMENTATION_SUMMARY.md  DEFINITIVE_RAG_FIX.md  DEPLOY_CSS_FIX.md  DOCKER_DATABASE_STATUS.md  ECOMMERCE_DASHBOARD_NARRATIVE_IMPLEMENTATION.md  EMBEDDING_FIX.md  FAQ_CLICK_TRACKING_IMPLEMENTATION.md  FAQ_CLICK_TRACKING_TEST_RESULTS.md  FORCE_RELOAD_INSTRUCTIONS.md  FRONTEND_DASHBOARD_FOUNDATION_COMPLETE.md  GLASS_CARD_FIX_SUMMARY.md  HERO_ROW_WIDGET_UPGRADES_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE_WEBSOCKET.md  KNOWLEDGE_EFFECTIVENESS_WIDGET_ANALYSIS.md  Makefile  ONBOARDING_REDESIGN_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  Product Requirements Document (PRD).ini  QUICK_REFERENCE.md  QUICK_TEST.md  RAG_FIX_COMPLETE.md  RAG_INVESTIGATION_REPORT.md  RAG_LOCATION_FIX.md  (+84 more)
backend/: --tb=2  .bandit  .coverage  .env  .env.bak  .env.example  .gitignore  Dockerfile  SECURITY_TEST_SUMMARY.md  alembic.ini  check_db.py  check_merchants.py  create_test_merchant.py  debug_product_search.py  debug_shopify_api.py  find_legacy_branding.py  fix_db.py  get_order.py  grep  head  list_routes.py  list_routes_detailed.py  monitor_websocket.sh  nohup.out  pyproject.toml  pytest  query_mac.py  query_orders.py  reproduce_issue.py  requirements-dev.txt  seed_blank_account.py  seed_demo_account.py  seed_e2e_product_pins.py  seed_first_time_user.py  seed_story_3_5.py  seed_test_account.py  seed_test_merchant.py  test_all_merchants_top_products.py  test_handoff_resolution_manual.py  test_mode_responses.py  (+7 more)
backend/alembic/: env.py
backend/app/: __init__.py  conftest.py  main.py  test_main.py  test_security_integration.py
backend/docs/: data-tier-separation.md  retention-monitoring-runbook.md
backend/scripts/: __init__.py  backfill_customer_names.py  backfill_rag_query_logs.py  cleanup_e2e_database.sh  cleanup_stale_widget_conversations.py  close_active_conversations.py  create_missing_handoff_alerts.py  diagnose_websocket.py  generate_realistic_query_data.py  monitor_rag_logs.py  reembed_documents.py  run-tests.sh  seed_test_data.py  setup_e2e_database.sh  test_email_lookup_flow.py  test_handoff_gap.py  test_handoff_resolution_flow.py  test_order_enhancements.py  test_order_items.py  test_storefront_query.py  update_order_items.py  update_shopify_token.py  verify_handoff_e2e.py
(+2437 files in other folders)
