[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shop-monorepo"
version = "0.1.0"
description = "Shopping Assistant Bot - Monorepo Workspace"
requires-python = ">=3.11.7"

# Monorepo workspace configuration
[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

# Development dependencies (workspace-level)
[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "commitizen>=3.12.0",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
